# irremocon

./: .gitignore  Cargo.toml  LICENSE
ir-command/: Cargo.toml
ir-command/src/: infrared_codes.rs  lib.rs  receive_codes.rs  transmit_codes.rs
ir-command/src/irrec/: main.rs
ir-command/src/irtransmit/: main.rs
ir-command/tests/: test.rs
src/: lib.rs
src/irrec/: main.rs
src/irsend/: main.rs
tests/: test.rs
