[package]
name = "irremocon"
version = "0.1.0"
authors = ["Akihiro YAMAMOTO"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "irrec"
path = "src/irrec/main.rs"

[[bin]]
name = "irsend"
path = "src/irsend/main.rs"

[dependencies]
nix = "0.14.1"
timerfd = "1.0.0"
getch = "0.2.1"
rppal = "0.11.3"
