[package]
name = "irremocon"
version = "0.1.1"
authors = ["Akihiro YAMAMOTO <ak1211@mail.ak1211.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.14.1"
timerfd = "1.0.0"
getch = "0.2.1"
rppal = "0.11.3"

[[bin]]
name = "irrec"
path = "src/irrec/main.rs"

[[bin]]
name = "irtransmit"
path = "src/irtransmit/main.rs"

